mise en place de la second navbar

--- a/public/assets/less/core/colors/colors.less
+++ b/public/assets/less/core/colors/colors.less
@@ -544,6 +544,18 @@
         border-color: @color-grey-500;
         color: #fff;
 
+        &-100 {
+            background-color: @color-grey-100;
+            border-color: @color-grey-100;
+            color: #333;
+        }
+        
+        &-200 {
+            background-color: @color-grey-200;
+            border-color: @color-grey-200;
+            color: #333;
+        }
+
         &-300 {
             background-color: @color-grey-300;
             border-color: @color-grey-300;
