--- a/public/assets/less/core/colors/palette.less
+++ b/public/assets/less/core/colors/palette.less
@@ -160,6 +160,8 @@
 
 // Grey palette
 @color-grey-50: #FAFAFA;
+@color-grey-100: #E1E1E1;
+@color-grey-200: #E2E2E2;
 @color-grey-300: #999;
 @color-grey-400: #888;
 @color-grey-500: #777;
