--- a/public/assets/css/colors.css
+++ b/public/assets/css/colors.css
@@ -453,6 +453,16 @@
   border-color: #777;
   color: #fff;
 }
+.bg-grey-100 {
+  background-color: #E1E1E1;
+  border-color: #E1E1E1;
+  color: #333;
+}
+.bg-grey-200 {
+  background-color: #E2E2E2;
+  border-color: #E2E2E2;
+  color: #333;
+}
 .bg-grey-300 {
   background-color: #999;
   border-color: #999;
