creation du product list conteneur

--- a/public/assets/less/core/colors/colors.less
+++ b/public/assets/less/core/colors/colors.less
@@ -476,6 +476,12 @@
             color: #fff;
         }
 
+        &-100 {
+            background-color: @color-orange-100;
+            border-color: @color-orange-100;
+            color: #fff;
+        }
+
         &-400 {
             background-color: @color-orange-400;
             border-color: @color-orange-400;
