--- a/public/assets/css/colors.css
+++ b/public/assets/css/colors.css
@@ -398,6 +398,11 @@
   border-color: #FFB74D;
   color: #fff;
 }
+.bg-orange-100 {
+  background-color: #FA6400;
+  border-color: #FA6400;
+  color: #fff;
+}
 .bg-orange-400 {
   background-color: #FFA726;
   border-color: #FFA726;
