--- a/public/assets/less/core/colors/palette.less
+++ b/public/assets/less/core/colors/palette.less
@@ -140,6 +140,7 @@
 
 // Orange palette
 @color-orange-50: #FFF3E0;
+@color-orange-100: #FA6400;
 @color-orange-300: #FFB74D;
 @color-orange-400: #FFA726;
 @color-orange-500: #FF9800;
