Url de la page de connexion et page de connexion basique

--- a/public/assets/less/components/pages/login.less
+++ b/public/assets/less/components/pages/login.less
@@ -12,7 +12,8 @@
 
 // Cover image
 .login-cover {
-    background: url('../images/login_cover.jpg') no-repeat;
+    /*background: url('../images/login_cover.jpg') no-repeat;*/
+    background: #f5f5f5;
     background-size: cover;
 }
 
@@ -27,7 +28,7 @@
 
         // Add fixed width
         .login-form {
-            width: 320px;
+            width: 360px;
 
             // Thumbnail
             .thumb {
