--- a/public/assets/css/components.css
+++ b/public/assets/css/components.css
@@ -18792,7 +18792,8 @@ thead .htCollapseButton:after {
  *
  * ---------------------------------------------------------------------------- */
 .login-cover {
-  background: url('../images/login_cover.jpg') no-repeat;
+  /*background: url('../images/login_cover.jpg') no-repeat;*/
+  background: #f5f5f5;
   background-size: cover;
 }
 .login-container .page-container {
@@ -18800,7 +18801,7 @@ thead .htCollapseButton:after {
   position: static;
 }
 .login-container .page-container .login-form {
-  width: 320px;
+  width: 360px;
 }
 .login-container .page-container .login-form .thumb {
   margin: 0 auto 20px auto;
