--- a/src/Ui/assets/css/core.css
+++ b/src/Ui/assets/css/core.css
@@ -6484,3 +6484,4 @@ h6.panel-title,
 .popover[class*=border-].left > .arrow:after {
   border-left-color: inherit;
 }
+/*# sourceMappingURL=core.css.map */
